Auth guard, Interceptors, custom directives

--- a/src/app/directives/directives.component.html
+++ b/src/app/directives/directives.component.html
@@ -38,7 +38,7 @@
 <!--  Div Hidden!!-->
 <!--</ng-template>-->
 
-<button (click)="showDiv=!showDiv">Toggle div</button>
+<!--<button (click)="showDiv=!showDiv">Toggle div</button>-->
 
 
 <!--NG FOR-->
@@ -53,20 +53,22 @@
 
 <!--NG SWITCH-->
 
-<div [ngSwitch]="switchValue">
-  <div *ngSwitchCase="'primary'">primary value</div>
-  <div *ngSwitchCase="'secondary'">secondary value</div>
-  <div *ngSwitchDefault>Other value</div>
-  <div></div>
-</div>
+<!--<div [ngSwitch]="switchValue">-->
+<!--  <div *ngSwitchCase="'primary'">primary value</div>-->
+<!--  <div *ngSwitchCase="'secondary'">secondary value</div>-->
+<!--  <div *ngSwitchDefault>Other value</div>-->
+<!--  <div></div>-->
+<!--</div>-->
+
+
+<!--Structural-->
+
+<!--Attribute-->
 
 
 
 
-
-
-
-
+<div appHighlight highlightColor="yellow">Important Text</div>
 
 
 
